fixing nav bar offcenter

--- a/css/theme.css
+++ b/css/theme.css
@@ -6,7 +6,7 @@ body {
 	opacity: 0;
 }
 
-.bar, .mainBody, #nav {
+.bar, .mainBody {
 	width: 50%;
 	margin-left: auto;
     margin-right: auto;
